Project5/Project5.sdk/.metadata/.plugins/org.eclipse.cdt.ui/standalone_bsp_0_xtmrctr_pwm_example_1.build.log
20:16:25 **** Build of configuration Debug for project standalone_bsp_0_xtmrctr_pwm_example_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/xtmrctr_pwm_example.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xtmrctr_pwm_example.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/xtmrctr_pwm_example.d" -MT"src/xtmrctr_pwm_example.o" -o "src/xtmrctr_pwm_example.o" "../src/xtmrctr_pwm_example.c"
../src/xtmrctr_pwm_example.c: In function 'main':
../src/xtmrctr_pwm_example.c:78:33: error: 'XPAR_FABRIC_TMRCTR_0_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_TMRCTR_0_DEVICE_ID'?
 #define TMRCTR_INTERRUPT_ID     XPAR_FABRIC_TMRCTR_0_VEC_ID
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xtmrctr_pwm_example.c:140:25: note: in expansion of macro 'TMRCTR_INTERRUPT_ID'
       TMRCTR_DEVICE_ID, TMRCTR_INTERRUPT_ID);
                         ^~~~~~~~~~~~~~~~~~~
../src/xtmrctr_pwm_example.c:78:33: note: each undeclared identifier is reported only once for each function it appears in
 #define TMRCTR_INTERRUPT_ID     XPAR_FABRIC_TMRCTR_0_VEC_ID
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xtmrctr_pwm_example.c:140:25: note: in expansion of macro 'TMRCTR_INTERRUPT_ID'
       TMRCTR_DEVICE_ID, TMRCTR_INTERRUPT_ID);
                         ^~~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:23: src/xtmrctr_pwm_example.o] Error 1

20:16:25 Build Finished (took 158ms)

